fixed intranet page

--- a/karl/views/static/ux2/css/elements/base.less
+++ b/karl/views/static/ux2/css/elements/base.less
@@ -668,17 +668,17 @@ ul.alphabet {
         margin-bottom: -12px;
     }
 }
-#main {
-    #left {
-        .col(3);
-    }
-    #center {
-        .col(6);
-    }
-    #right {
-        .col(3);
-    }
-}
+// #main {
+//     #left {
+//         .col(3);
+//     }
+//     #center {
+//         .col(6);
+//     }
+//     #right {
+//         .col(3);
+//     }
+// }
 /* @group Content */
 section.main {
     position: relative;
