--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -1029,7 +1029,33 @@ div.center_intranet {
   width: 72%;
 }
 ul.actionsMenu {
-  display: none;
+  display: block;
+  margin-top: 0.134em;
+  margin-bottom: 0.677em;
+  font-size: 0.9em;
+  position: relative;
+  float: right;
+  clear: both;
+  list-style: none;
+  padding: 0;
+  margin: 0 1em;
+  width: auto;
+  height: auto;
+  font-size: 0.75em;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+ul.actionsMenu > li {
+  display: inline;
+}
+ul.actionsMenu > li > a {
+  display: inline-block;
+}
+ul.actionsMenu > li {
+  float: left;
+  margin-right: 1px;
+}
+ul.actionsMenu > li > a {
+  color: #333333;
 }
 .transparentGrid h3 {
   margin-top: 0;
