add styles for network events portlet

--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -1047,6 +1047,16 @@ body > footer {
                     line-height: 1.25em;
                 }
             }
+            ul#events_portlet {
+                list-style: none;
+                padding: 0 0 1em;
+                margin: 0;
+                .event_title {
+                    padding-left: 10px;
+                }
+                li {
+                    line-height: 1.25em;
+                }
             .more {
                 font-size: 0.8em;
                 padding: 0.4em 0;
