--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -1,3 +1,7 @@
+// Fonts
+@import "../fonts/cabin/stylesheet.css";
+@import "../fonts/League-Gothic/stylesheet.css";
+// Variables
 @import "bootstrap/variables.less";
 @import "karl/variables.less";
 
