fixed content padding

--- a/karl/views/static/ux2/css/karl/base.less
+++ b/karl/views/static/ux2/css/karl/base.less
@@ -159,7 +159,7 @@ a.moreToggle {
     padding: 1.33em 0;
     section.main {
         .col(9);
-        padding: 1.593137252em 0 ((@space * 1em) * 2);
+        padding: 0 0 ((@space * 1em) * 2);
     }
     aside.shiftMe {
         padding-top: 3.5em;
