fixed filter bar

--- a/karl/views/static/ux2/css/karl/misc.less
+++ b/karl/views/static/ux2/css/karl/misc.less
@@ -126,7 +126,7 @@ form#send-message {
     background-color: @grayLighter;
     .css3_border_radius(.25em .25em 0 0);
     color: @grayLight;
-    padding: @space/3 * 1em;
+    padding: 5px 5px 2px 5px;
     margin-bottom: 1px;
     .clearfix();
     clear: both;
@@ -160,7 +160,7 @@ form#send-message {
             position: relative;
             &:before, &:after {
                 position: absolute;
-                bottom: -1 * (@space/3 * 1em);
+                bottom: -9px;
                 left: 50%;
                 margin-left: -0.5em;
                 .trianglePointer(top, @bodyBg, .5em);
