--- a/karl/views/static/ux2/css/karl/chrome.less
+++ b/karl/views/static/ux2/css/karl/chrome.less
@@ -135,6 +135,7 @@ div.topNavIconWrapper {
     overflow: visible;
     position: static;
     padding: 0;
+    margin: 0;
     border: none;
     font-size: 1em;
     font-family: @baseFont;
