--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -5780,6 +5780,7 @@ div.topNavIconWrapper {
   overflow: visible;
   position: static;
   padding: 0;
+  margin: 0;
   border: none;
   font-size: 1em;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
