removed unused font family

--- a/karl/views/static/ux2/css/karl/variables.less
+++ b/karl/views/static/ux2/css/karl/variables.less
@@ -37,7 +37,7 @@
 @smallestbaseFont: @sansFontFamily;
 @altFontFamily: @serifFontFamily;
 
-@headingsFontFamily: "LeagueGothicRegular", Arial, sans-serif; // empty to use BS default, @baseFontFamily
+//@headingsFontFamily: "LeagueGothicRegular", Arial, sans-serif; // empty to use BS default, @baseFontFamily
 @headingsFontWeight: bold;    // instead of browser default, bold
 @headingsColor: inherit; // empty to use BS default, @textColor
 
