--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -1,6 +1,6 @@
 // Fonts
 @import "../fonts/cabin/stylesheet.css";
-@import "../fonts/League-Gothic/stylesheet.css";
+//@import "../fonts/League-Gothic/stylesheet.css";
 // Variables
 @import "bootstrap/variables.less";
 @import "karl/variables.less";
