--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -815,6 +815,7 @@ body > footer {
                 li {
                     line-height: 1.25em;
                 }
+            }
             .more {
                 font-size: 0.8em;
                 padding: 0.4em 0;
