--- a/karl/views/static/ux2/css/karl/intranet.less
+++ b/karl/views/static/ux2/css/karl/intranet.less
@@ -116,7 +116,8 @@ div.center_intranet {
                 margin-top: 0;
                 text-transform: uppercase;
             }
-            ul#calendar_portlet {
+            ul#calendar_portlet,
+            ul#events_portlet {
                 list-style: none;
                 padding: 0 0 1em;
                 margin: 0;
