removed unused btn-medium

--- a/karl/views/static/ux2/css/karl/portlets.less
+++ b/karl/views/static/ux2/css/karl/portlets.less
@@ -22,7 +22,7 @@
     }
     .portlet-buttons {
         margin-top: 1em;
-        a, a.btn {
+        a {
             color: #000000;
         }
     }
