fixed searchbar in search results

--- a/karl/views/static/ux2/css/karl/legacy.less
+++ b/karl/views/static/ux2/css/karl/legacy.less
@@ -38,11 +38,9 @@
 }
 .sras-searchbar {
     text-align: center;
-    #ls-current-searchterm {
-        width: 75%;
-    }
+    #ls-current-searchterm,
     #sras-search-button {
-        margin-bottom: 5px;
+        font-size: 12px;
     }
     .sras-discreet {
         color: darken(@grayLighter, 10%);
