font size reset

--- a/karl/views/static/ux2/css/karl/chrome.less
+++ b/karl/views/static/ux2/css/karl/chrome.less
@@ -32,6 +32,7 @@ form#chatter-post-form button.searchButton {
     border-bottom: @white;
     height: auto;
     zoom: 1;
+    font-size: 1.25em;
     .gradientBar(#444, #222);
     .clearfix();
     .container {
@@ -113,6 +114,7 @@ nav.search {
     margin: 0;
     background: #222;
     width: 225px;
+    z-index: 100;
     .css3_border_radius(0 0 .5em .5em);
     > .topNavIconWrapper {
         width: 100%;
