--- a/karl/views/static/ux2/css/karl/base.less
+++ b/karl/views/static/ux2/css/karl/base.less
@@ -2,7 +2,7 @@ html {
     height: auto;
 }
 body {
-    font-size: (@baseFontSize - 1)/@baseFontSize * 1em;
+    font-size: 12px; //(@baseFontSize - 1)/@baseFontSize * 1em;
     background-repeat: no-repeat;
     background-color: @white;
     position: relative;
@@ -29,10 +29,6 @@ h3 {
 }
 h4 {
     font-size: 1.185em;
-}
-th, td {
-    padding: 0.375em .5em;
-    font-size: 0.889em;
 }
 table {
     margin: @space;
@@ -122,6 +118,7 @@ a.moreToggle {
     .css3_box_shadow(none);
 }
 .sectionContainer {
+    font-size: 1.3em;
     .gradientBar(#cfd5da, darken(#cfd5da, 30%));
     text-shadow: none;
     h2 {
@@ -316,7 +313,7 @@ section.main aside {
     width: 17.713em;
     padding: (@space * 1em);
     margin: 0 0 (@space * 1em) (@space * 1em);
-    font-size: 0.889em;
+    font-size: 1em;
 }
 .column {
     border-top: none;
@@ -330,7 +327,7 @@ section.main aside {
 }
 .section-submenu {
     font-family: @fancyFont;
-    font-size: 0.8em;
+    font-size: 1em;
     padding: 0;
     margin: 0;
     .nav-pills {
