--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -5117,7 +5117,7 @@ html {
   height: auto;
 }
 body {
-  font-size: 0.9166666666666666em;
+  font-size: 12px;
   background-repeat: no-repeat;
   background-color: #ffffff;
   position: relative;
@@ -5144,11 +5144,6 @@ h3 {
 }
 h4 {
   font-size: 1.185em;
-}
-th,
-td {
-  padding: 0.375em .5em;
-  font-size: 0.889em;
 }
 table {
   margin: 1.333;
@@ -5267,6 +5262,7 @@ a.moreToggle:before {
   box-shadow: none;
 }
 .sectionContainer {
+  font-size: 1.3em;
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   background-color: #acb7bf;
@@ -5544,7 +5540,7 @@ section.main aside {
   width: 17.713em;
   padding: 1.333em;
   margin: 0 0 1.333em 1.333em;
-  font-size: 0.889em;
+  font-size: 1em;
 }
 .column {
   border-top: none;
@@ -5571,7 +5567,7 @@ section.main aside {
 }
 .section-submenu {
   font-family: "CabinRegular", Arial, sans-serif;
-  font-size: 0.8em;
+  font-size: 1em;
   padding: 0;
   margin: 0;
 }
@@ -5640,6 +5636,7 @@ form#chatter-post-form button.searchButton {
   border-bottom: #ffffff;
   height: auto;
   zoom: 1;
+  font-size: 1.25em;
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   background-color: #363636;
@@ -5750,6 +5747,7 @@ nav.search {
   margin: 0;
   background: #222;
   width: 225px;
+  z-index: 100;
   -webkit-border-radius: 0 0 0.5em 0.5em;
   -moz-border-radius: 0 0 0.5em 0.5em;
   border-radius: 0 0 0.5em 0.5em;
@@ -6205,7 +6203,7 @@ ul.actionsMenu {
   display: block;
   margin-top: 0.134em;
   margin-bottom: 0.677em;
-  font-size: 0.9em;
+  font-size: 1em;
   position: relative;
   float: right;
   clear: both;
@@ -6214,8 +6212,6 @@ ul.actionsMenu {
   margin: 0 1em;
   width: auto;
   height: auto;
-  font-size: 0.75em;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 ul.actionsMenu > li {
   display: inline;
@@ -6716,8 +6712,6 @@ div[data-quickpanel='quickpanel'] {
 a.tag,
 a.item,
 a.tagCounter {
-  font-size: 0.75em;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   float: left;
   margin-right: 0;
 }
@@ -6794,7 +6788,6 @@ a.removeTag {
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding-box;
   background-clip: padding-box;
-  font-size: .85em;
 }
 a.personal {
   background: #c8c8c8;
@@ -6861,7 +6854,6 @@ form.addTag fieldset {
   position: relative;
   padding: 0;
   margin: 0;
-  font-size: 0.889em;
   width: 15em;
 }
 form.addTag input,
@@ -6873,7 +6865,6 @@ form.addTag input {
   padding: .2em 8.230769231em .2em .25em;
   line-height: normal;
   width: auto;
-  font-size: 1em;
   outline: none;
   border: none;
   -webkit-box-shadow: none;
@@ -6890,9 +6881,6 @@ form.addTag button {
   position: absolute;
   top: 0;
   right: 0;
-  font-size: 0.75em;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 1em;
   line-height: 1.5em;
   padding: .2em .666666667em;
   -webkit-box-shadow: 0 0 0 1px #999999;
@@ -6920,7 +6908,7 @@ form.addTag button {
   line-height: 1.5em;
 }
 .no-touch form.addTag fieldset {
-  font-size: .75em;
+  font-size: .82em;
 }
 #tagStatus {
   margin: 5px 0 0 0;
@@ -6974,7 +6962,6 @@ form.addTag button {
 }
 .portlet h3 {
   text-transform: uppercase;
-  font-size: 1.333;
   margin-top: 0;
   text-align: center;
   padding-bottom: 10px;
@@ -6996,10 +6983,6 @@ form.addTag button {
 .sectionRelated {
   text-shadow: none;
 }
-#my-communities-list,
-#blog-archive {
-  font-size: 0.9em;
-}
 #my-communities-list a.btn,
 #blog-archive a.btn {
   color: #000000;
@@ -7016,7 +6999,7 @@ form.addTag button {
 }
 .portlet-item .footer-line {
   color: #555555;
-  font-size: 0.80em;
+  font-size: 0.8em;
   font-style: italic;
 }
 .portlet-item:nth-last-of-type(-n+1) {
@@ -9834,7 +9817,7 @@ form#send-message .actions .contentPadding input {
   clear: both;
   list-style: none;
   clear: none;
-  margin: 0;
+  margin: 4px 0 0 0;
   padding: 0;
   float: left;
   line-height: 26px;
@@ -9853,9 +9836,6 @@ form#send-message .actions .contentPadding input {
 .filter .alphabet span {
   display: inline-block;
   padding: 0 .4em;
-  line-height: 1em;
-  font-size: 0.75em;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .filter .alphabet .notcurrent span {
   display: none;
@@ -9867,7 +9847,7 @@ form#send-message .actions .contentPadding input {
 .filter .alphabet li.current:before,
 .filter .alphabet li.current:after {
   position: absolute;
-  bottom: -9px;
+  bottom: -8px;
   left: 50%;
   margin-left: -0.5em;
   border-top: none;
@@ -9918,16 +9898,11 @@ form#send-message .actions .contentPadding input {
   float: right;
   margin-top: 0.2em;
 }
-.filterOptions .btn-mini {
-  font-size: 0.7em;
-}
 .filterOptions a {
   color: #333333;
 }
 .filterOptions > li {
   margin-top: 1px;
-  font-size: 0.75em;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .ui-grid-row h3 {
   padding: 0;
@@ -9984,8 +9959,6 @@ section.main .vcard .adr {
   padding: 0 1.333em;
   margin-top: 0;
   margin-bottom: 1.333em;
-  font-size: 0.75em;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   *zoom: 1;
   line-height: 3em;
 }
@@ -10092,7 +10065,6 @@ a.next {
   padding: 1em;
   min-height: 50px;
   height: auto !important;
-  font-size: 0.85em;
   display: block;
 }
 .blogComment a:hover {
@@ -10265,8 +10237,6 @@ body > footer {
   background-color: #ffffff;
   color: #000000;
   text-align: center;
-  font-size: 0.75em;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 section > header {
   margin-bottom: 1em;
@@ -10389,7 +10359,6 @@ table.messageBoard th.forums {
 }
 .pushdownContent h3 {
   margin-top: 0;
-  font-size: 1.18em;
   font-weight: bold;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
   position: relative;
@@ -10409,7 +10378,6 @@ table.messageBoard th.forums {
 .pushdownContent .messagetext {
   display: block;
   line-height: normal;
-  font-size: 0.9em;
 }
 .pushdownContent a.messagetext {
   color: #555;
@@ -10450,7 +10418,6 @@ table.messageBoard th.forums {
 .pushDownList-title {
   margin: 0;
   padding: 0;
-  font-size: 1em;
 }
 .pushDownList-info {
   font-size: 0.75em;
@@ -10653,12 +10620,10 @@ table.messageBoard th.forums {
 }
 #chatter-panel .help-block {
   color: #ccc;
-  font-size: .75em;
   font-family: "CabinRegular", Arial, sans-serif;
 }
 #chatter-panel .timeago {
   font-family: "CabinRegular", Arial, sans-serif;
-  font-size: 0.8em;
   display: block;
 }
 #chatter-wrapper.active,
@@ -10689,9 +10654,6 @@ table.messageBoard th.forums {
 #chatter-user-info a:hover {
   text-decoration: underline;
 }
-#chatter-user-info strong {
-  font-size: 1em;
-}
 #chatter-user-info img {
   float: left;
   margin-right: 10px;
@@ -10714,7 +10676,6 @@ table.messageBoard th.forums {
 }
 #chatter-user-info .user-info .profile-link {
   display: block;
-  font-size: 0.8em;
 }
 #chatter-user-info .user-stats {
   clear: both;
@@ -10738,21 +10699,18 @@ table.messageBoard th.forums {
   background-color: #eeeeee !important;
   width: 25%;
   margin-right: 2px;
-  font-size: 0.9em;
   line-height: 1.5em;
   display: inline-block;
   padding: 0.5em;
   vertical-align: middle;
 }
 #chatter-user-info .user-stats ul > li strong {
-  font-size: 1.75em;
   display: block;
 }
 #chatter-user-info .user-stats ul > li:last-child {
   margin-right: 0;
 }
 .chatter-options-panel {
-  font-size: 0.9em;
   clear: both;
   margin-top: 16px;
   opacity: 0;
@@ -10764,7 +10722,6 @@ table.messageBoard th.forums {
   position: absolute;
   top: .6em;
   right: .73em;
-  font-size: 0.85em;
   font-weight: normal;
   vertical-align: text-bottom;
 }
@@ -10784,7 +10741,6 @@ table.messageBoard th.forums {
   background-color: #ffffff !important;
   width: 100%;
   height: 100px;
-  font-size: 0.8em;
 }
 .panel-header .new-post .help-block {
   width: 100%;
@@ -10855,7 +10811,6 @@ table.messageBoard th.forums {
 }
 .panel-item-header .timeago,
 .panel-item-header .post-options {
-  font-size: 0.8em;
   padding: 2.5px 5px;
   color: #000000;
   display: block;
@@ -10889,7 +10844,6 @@ table.messageBoard th.forums {
 }
 .panel-item-footer {
   display: block;
-  font-size: 0.8em;
 }
 .hide-original {
   position: relative;
@@ -10912,7 +10866,6 @@ table.messageBoard th.forums {
 }
 .conversation-controls {
   font-family: "CabinRegular", Arial, sans-serif;
-  font-size: 0.9em;
 }
 .conversation-controls a {
   margin-right: 10px;
@@ -10947,7 +10900,6 @@ table.messageBoard th.forums {
   width: 30.555555555555557%;
   margin-left: 1.3888888888888888%;
   margin-right: 1.3888888888888888%;
-  font-size: 0.9em;
 }
 .chatter-messages-users:before,
 .chatter-messages-users:after {
@@ -11033,7 +10985,6 @@ table.messageBoard th.forums {
   float: left;
   padding: 10px;
   margin: 10px 0;
-  font-size: 0.9em;
   min-height: 45px;
   background-color: #eeeeee;
   width: 70%;
@@ -11500,7 +11451,6 @@ input.chatter-control {
   padding: 0;
   width: 33%;
   margin: 0 0.5% 0.5% 0;
-  font-size: 0.9em;
   float: left;
   display: inline;
   overflow: hidden;
@@ -11511,7 +11461,6 @@ input.chatter-control {
 .profilesWrapper .photoProfile h4 {
   margin: 10px 10px 0;
   font-weight: normal;
-  font-size: 1em;
 }
 .profilesWrapper .photoProfile p {
   line-height: 1.5em;
